syntax = "proto3";
package pb;

option go_package = "github.com/snple/kirara/pb;pb";

message Const {
    string id = 1;
    string device_id = 2;
    string name = 3;
    string desc = 4;
    string tags = 5;
    string type = 6;
    string data_type = 7;
    string value = 8;
    string h_value = 9;
    string l_value = 10;
    string config = 11;
    sint32 status = 12;
    sint32 access = 13;
    int64 created = 14;
    int64 updated = 15;
    int64 deleted = 16;
}

message ConstValue {
    string id = 1;
    string value = 2;
    int64 updated = 3;
}

message ConstNameValue {
    string id = 1;
    string name = 2;
    string value = 3;
    int64 updated = 4;
}
